# bluesky-research

./: .cursorignore  .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CSV_Export_Bug_Fix_Summary.md  LICENSE  README.md  analyze_csv_script.py  dev_requirements.in  dev_requirements.txt  pyproject.toml  pyrightconfig.json  pytest.ini  query_profile.json  requirements.in  requirements.txt  research_pipeline_architect_review.md  sna_mini_graph.html  temp_spec.md
Dockerfiles/: README.md  add_users_to_study.Dockerfile  analytics_platform.Dockerfile  calculate_superposters.Dockerfile  compact_dedupe_data.Dockerfile  consolidate_enrichment_integrations.Dockerfile  consume_sqs_messages.Dockerfile  data_pipeline_orchestration.Dockerfile  feed_api.Dockerfile  feed_preprocessing.Dockerfile  generate_vector_embeddings.Dockerfile  ml_inference_perspective_api.Dockerfile  ml_inference_sociopolitical.Dockerfile  preprocess_raw_data.Dockerfile  rank_score_feeds.Dockerfile  sync_firehose_feed.Dockerfile  sync_firehose_stream.Dockerfile  sync_most_liked_feed.Dockerfile
agents/: CODING_AGENT.md  coding.py  debugging_agent.py  documentation_agent.py  prompts.py  service_templates.py  testing_agent.py
api/: README.md  main.py
bluesky_database/: README.md  __init__.py  start-frontend.sh  system_design.md
demos/: README.md  requirements.txt
distributed_job_coordination/: README.md
experiments/: README.md  README_post_length_calculator.md  get_user_profile.py  post_length_calculator.py  qa_classifiers_on_old_data.py  reddit_comments_labeled_with_perspective_classifiers_2024-02-03_12-05-56.csv  reddit_comments_labeled_with_perspective_classifiers_2024-02-03_12-10-26.csv
feed_api/: README.md  app.py  app_test.py  auth.py  config.py  delete_old_feeds.py  dev_requirements.txt  handler.py  helper.py  locustfile.py  publish_feed.py  requirements.in  requirements.txt  run_locust.sh  serverless_cache.py  test_app.py  test_endpoint.py  threading_test.py  user_session_queue.py
lib/: batching_utils.py  classes.py  constants.py  datetime_utils.py  db.py  endpoints.py  helper.py  json_file_utils.py  load_env_vars.py  opik.py  path_utils.py  serverless_cache.py  utils.py  validate_parquet.py
ml_tooling/: README.md  dev_requirements.in  dev_requirements.txt  inference_helpers.py  requirements.in  requirements.txt
orchestration/: README.md  analytics_pipeline.py  compaction_pipeline.py  create_analytics_pipeline_cron_job.sh  create_compaction_pipeline_cron_job.sh  create_cron_job.sh  create_data_pipeline_cron_job.sh  create_integrations_sync_pipeline_cron_job.sh  create_recommendation_pipeline_cron_job.sh  create_sync_pipeline_cron_job.sh  data_pipeline.py  helper.py  integrations_sync_pipeline.py  main.py  mark_task_as_complete.py  recommendation_pipeline.py  requirements.in  requirements.txt  submit_analytics_pipeline_job.sh  submit_compaction_pipeline_job.sh  submit_data_pipeline_job.sh  submit_integrations_sync_pipeline_job.sh  submit_job.sh  submit_recommendation_pipeline_job.sh  submit_sync_pipeline_job.sh  sync_pipeline.py  test_a.sh  test_b.sh  test_c.sh  test_d.sh  test_e.sh  test_f.sh  test_main.py
pipelines/: README.md  create_feeds.py  data_pipeline_orchestration.py  filter_posts.py  generate_features.py  get_raw_posts.py  requirements.in  requirements.txt
pipelines/get_existing_user_social_network/: README.md  pyproject.toml
pipelines/get_existing_user_social_network/src/get_existing_user_social_network/: __init__.py  helper.py  main.py  onboard_social_network_for_new_users.py  test.py  test_follows_list_from_scraping.csv  test_follows_v2.csv  true_follows_from_api.csv
query_interface/: __init__.py
query_interface/backend/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  cli.py  constants.py  pyproject.toml  railway.json
query_interface/backend/agents/: __init__.py  agent.py  router.py  sql_generator.py
query_interface/backend/agents/tools/: sql_generator.py
query_interface/backend/agents/tools/can_answer_with_sql/: exceptions.py  models.py  prompt.py  tool.py
query_interface/backend/agents/tools/enforce_user_query_constraints/: exceptions.py  tool.py
query_interface/backend/agents/tools/enforce_user_query_constraints/tests/: __init__.py  test_tool.py
query_interface/backend/agents/tools/generate_sql/: exceptions.py  models.py  prompt.py  tool.py
query_interface/backend/agents/tools/prepare_sql_for_execution/: exceptions.py  tool.py
query_interface/backend/agents/tools/prepare_sql_for_execution/tests/: __init__.py  test_tool.py
query_interface/backend/agents/tools/run_sql_query/: README.md  exceptions.py  tool.py
query_interface/backend/agents/tools/run_sql_query/tests/: test_tool.py
query_interface/backend/agents/tools/validate_sql/: README.md  exceptions.py  tool.py
query_interface/backend/api/: __init__.py  schemas.py
query_interface/backend/config/: __init__.py  config.py  config.yaml
query_interface/backend/services/: __init__.py  llm_service.py  query_executor.py  schema_provider.py
query_interface/backend/services/tests/: test_llm_service.py
rules/: AGENT_CONVERSATION_STYLE.md  CODING_RULES.md  HOW_TO_START_NEW_PROJECT.md  HOW_TO_WRITE_A_SPEC.md  HOW_TO_WRITE_LINEAR_PROJECT.md  HOW_TO_WRITE_LINEAR_TICKET.md  LLM_REFLECTION_DEBUGGING_RULES.md  README.md  TASK_PLANNING_AND_PRIORITIZATION.markdown  TASK_PLANNING_AND_PRIORITIZATION.md  WHAT_MAKES_A_GREAT_TICKET.md
scripts/: README.md  apply_archive_tables_terraform.sh  backfill_previous_generated_feeds.py  backfill_user_session_logs.py  build_single_service_local.sh  compact_existing_follows_data.py  compact_existing_like_data.py  create_feed_api_ec2_instance.sh  delete_files_from_lookback_period.py  deploy_all_images.py  deploy_image_to_ecr.sh  inspect_slurm_job.py  load_feeds_from_s3_to_local.py  queue_admin_reset_stale_processing.py  rebuild_feed_api.sh  rebuild_lambda.sh  run_bandit.py  run_docker_container.sh  run_firehose_docker.sh  setup_environment.sh  setup_new_firehose_ec2_instance.sh  submit_compaction_job.sh  test_athena_archive_tables.py  (+1 more)
(+2361 files in other folders)
