[project]
name = "bluesky-research"
version = "0.1.0"
description = "Bluesky Research"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Mark Torres", email = "markptorres1@gmail.com"},
]
license = "MIT"

# Core dependencies - always installed
dependencies = [
    # Core web and data processing
    "flask>=3.0.2",
    "requests>=2.31.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.1",
    # Database and storage
    "duckdb>=1.1.3",
    "peewee>=3.17.1",
    "aiosqlite>=0.21.0",
    "pyarrow>=17.0.0",
    # Cloud and external APIs
    "boto3>=1.40.11",
    "atproto>=0.0.61",
    # Visualization and utilities
    "matplotlib>=3.8.3",
    "click>=8.1.7",
    "memory-profiler>=0.60.0",
    # Standard dependencies
    "certifi>=2024.8.30",
    "charset-normalizer>=3.3.2",
    "idna>=3.8",
    "urllib3>=2.2.2",
    "packaging>=23.2",
    "typing-extensions>=4.12.2",
    "tenacity>=8.5.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=8.3.3",
    "pytest-env>=0.8.2",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.4.5",
    "bandit>=1.9.2",
    "vulture>=2.11.0",
    "autopep8>=2.1.0",
    "faker>=4.14.0",
    "freezegun>=1.2.2",
    "pre-commit>=3.7.1",
    "complexipy>=5.1.0",
]

# Machine Learning (heavy dependencies with PyTorch)
ml = [
    "torch>=2.5.1",
    "transformers>=4.44.2",
    "sentence-transformers>=2.6.1",
    "huggingface-hub>=0.27.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "tokenizers>=0.19.1",
]

# Topic Modeling and Analysis
analysis = [
    "bertopic>=0.17.0",
    "umap-learn>=0.5.9",
    "hdbscan>=0.8.40",
    "plotly>=6.3.0",
    "numba>=0.61.2",
    "llvmlite>=0.44.0",
    "pynndescent>=0.5.13",
    "nltk>=3.9.1",
]

# LLM and AI services (without heavy ML dependencies)
llm = [
    "openai>=1.55.3",
    "langchain>=0.1.7",
    "langchain-community>=0.0.20", 
    "langchain-core>=0.1.23",
    "tiktoken>=0.7.0",
    "litellm>=1.59.10",
    "google-generativeai>=0.5.0",
    "google-api-python-client>=2.116.0",
]

# Lightweight sentiment analysis
valence = [
    "vadersentiment>=3.3.2",
]

# Telemetry and monitoring
telemetry = [
    "wandb>=0.18.5",
    "comet-ml>=3.47.1",
    "sentry-sdk>=2.20.0",
    "prometheus-client>=0.19.0",
    "grafana-client>=4.3.2",
    "opentelemetry-api>=1.29.0",
    "opik>=1.9.42",
]

# Feed API service
feed_api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "mangum>=0.17.0",  # For AWS Lambda deployment
    "momento>=1.21.0",  # For caching
]

# All optional dependencies for CI
all = [
    "bluesky-research[dev,ml,llm,valence,telemetry,feed_api,analysis]"
]

[tool.setuptools.packages.find]
include = [
    "lib*",
    "ml_tooling*",
    "bluesky_database*",
    "services*",
    "transform*",
    "query_interface*",
    "pipelines*",
]
exclude = [
    "demos*", 
    "experiments*", 
    "deprecated*", 
    "assets*", 
    "terraform*", 
    "projects*",
    "Dockerfiles*",
    "*.tests*",
    "tests*"
]

[tool.flake8]
exclude = ["*/experiments/*", "./demos/*"]
max-line-length = 80
max-complexity = 10

[tool.ruff]
# Migrated from root-level `ruff.toml`
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests",
    "experiments",
    "*experiments*",
    "demos",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E9", "F"]

[tool.pyright]
# Migrated from root-level `pyrightconfig.json`
include = ["."]
exclude = [
    "**/.*",
    "**/node_modules",
    "**/__pycache__",
    "**/build",
    "**/dist",
    "**/data",
    "**/lib/log/*",
    "**/wandb/*",
    "services/sync/stream/cache/*",
    "services/sync/most_liked_posts/syncs/*",
    "**/*.csv",
    "**/*.json",
    "**/*.png",
]
venv = "bluesky_research"
ignoreExternal = true

[tool.pytest.ini_options]
# Add custom markers
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]

# Set environment variables for all tests
env = [
    "ENVIRONMENT=test",
    "RUN_MODE=test",
    "AWS_DEFAULT_REGION=us-east-1",
    "AWS_ACCESS_KEY_ID=testing",
    "AWS_SECRET_ACCESS_KEY=testing",
    "AWS_SECURITY_TOKEN=testing",
    "AWS_SESSION_TOKEN=testing",
    "GOOGLE_API_KEY=testing",
    "NYTIMES_KEY=testing",
    "HF_TOKEN=testing",
    "OPENAI_API_KEY=testing",
    "GOOGLE_AI_STUDIO_KEY=testing",
    "NEWSAPI_API_KEY=testing",
    "GROQ_API_KEY=testing",
    "MONGODB_URI=testing",
    "LANGTRACE_API_KEY=testing",
    "COMET_API_KEY=testing",
]

# Configure test collection
testpaths = [
    "lib/tests",
    "lib/db/tests", 
    "lib/db/sql/tests",
    "lib/telemetry/tests",
    "ml_tooling/ime/tests",
    "ml_tooling/llm/tests",
    "ml_tooling/perspective_api/tests",
    "services/backfill/pds_backfills/core/tests",
    "services/backfill/pds_backfills/storage/tests",
    "services/backfill/repositories/tests/",
    "services/backfill/services/tests",
    "services/ml_inference/tests",
    "services/ml_inference/ime/tests",
    "services/ml_inference/perspective_api/tests",
    "services/ml_inference/sociopolitical/tests",
    "services/ml_inference/intergroup/tests",
    "services/get_preprocessed_posts_used_in_feeds/tests",
    "services/repartition_service/tests",
    "services/calculate_analytics/tests",
    "services/calculate_analytics/study_analytics/calculate_analytics/tests",
    "services/rank_score_feeds/tests",
    "services/participant_data/tests",
    "services/consolidate_enrichment_integrations/tests",
    "services/calculate_superposters/tests",
    "services/sync/stream/tests",
    "services/sync/jetstream/tests",
    "pipelines/backfill_records_coordination/tests",
    "pipelines/classify_records/perspective_api/tests",
    "pipelines/classify_records/ime/tests",
    "pipelines/classify_records/sociopolitical/tests",
    "pipelines/classify_records/valence_classifier/tests",
    "transform/tests",
]

# Ignore certain directories
norecursedirs = [
    "experiments*",
    "*.egg",
    "build",
    "dist"
]

# Add command line default options
# Note: -p no:opik disables the opik plugin to avoid issues
addopts = [
    "--verbose",
    "--no-header",
    "--ignore=experiments",
    "--tb=short",
    "--strict-markers",
    "-p", "no:opik",
    "-m", "not integration",
]

# Configure pytest plugins
required_plugins = [
    "pytest-env",
    "pytest-mock"
]

# Fix asyncio fixture loop scope deprecation warning
asyncio_default_fixture_loop_scope = "function"

[tool.complexipy]
# Cognitive complexity analysis configuration
# Set to true to make complexipy informational only (won't fail CI)
# This allows developers to see complexity warnings but commit anyway
ignore-complexity = true
max-complexity-allowed = 10
color = "auto"
snapshot-create = false
# Set to true to make snapshot checks non-blocking (recommended for CI)
# The snapshot still tracks complex functions, but won't block commits
snapshot-ignore = true
quiet = false
failed = false
sort = "asc"
exclude = [
    "tests",
    "tests/**",
    "test_*/**",
    "experiments",
    "experiments/**",
    "demos",
    "demos/**",
    "deprecated",
    "deprecated/**",
    "scripts",
    "scripts/**",
    ".venv",
    ".venv/**",
    "build",
    "build/**",
    "dist",
    "dist/**",
]

[tool.complexipy.output]
csv = false
json = false

[tool.vulture]
min_confidence = 80
exclude = [
    ".git",
    ".venv",
    "tests",
    "demos",
    "experiments",
    "deprecated",
    "assets",
    "terraform",
    "Dockerfiles",
]
paths = [
    "lib",
    "ml_tooling",
    "services",
    "pipelines",
    "orchestration",
    "transform",
    "feed_api",
]
