[project]
name = "query-interface-cli"
version = "0.1.0"
description = "CLI tool for querying Athena with natural language"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Mark Torres", email = "markptorres1@gmail.com"},
]
license = "MIT"

dependencies = [
    "typer>=0.9.0",
    "openai>=1.55.3",
    "pandas>=2.2.2",
    "rich>=13.0.0",
    "langchain>=1.2.1",
    "langchain-openai>=1.1.7",
    "litellm>=1.80.12",
    "pyyaml>=6.0.3",
]

[project.scripts]
query-athena = "query_interface.backend.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "black>=24.0.0",
    "ruff>=0.4.5",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["../.."]
include = ["query_interface.backend*", "query_interface.backend.agents*", "query_interface.backend.services*"]


